Initial support for OnePlus in-display fingerprint sensor
Tested on OnePlus 6T.

Here are the list of things that are device-specific:
- Display modes
- fingerprint control (tell the fingerprint sensor the green circle is
ready, and what is its brightness)

Omni : Adapted for OnePlus
TODO: read circle position and size from overlays

Original commit : https://github.com/phhusson/platform_frameworks_base/commit/64b2e6d1fc378ac13783f5002e5a9d9379e75f3b

Change-Id: Ia4e0afeb3a1fa8c53d2838ece989aa9c5badd84f

--- a/core/res/res/values/bootleg_symbols.xml
+++ b/core/res/res/values/bootleg_symbols.xml
@@ -266,4 +266,8 @@
 
   <!-- Whether devices supports Qualcomm Boost Framework -->
   <java-symbol type="bool" name="config_enableQcCpuBoost" />
+
+  <!-- FoD -->
+  <java-symbol type="bool" name="config_needCustomFODView" />
+  <java-symbol type="bool" name="config_usesOnePlusFOD" />
 </resources>
