--- a/core/res/res/values/bootleg_config.xml
+++ b/core/res/res/values/bootleg_config.xml
@@ -149,4 +149,9 @@
   <!-- Whether to enable Qualcomm Boost Framework -->
   <bool name="config_enableQcCpuBoost">false</bool>
 
+  <!-- Show a custom view for FOD -->
+  <bool name="config_needCustomFODView">false</bool>
+
+  <bool name="config_usesOnePlusFOD">false</bool>
+
 </resources>
